CSS JS HTML update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="jumbotron text-center">
-        <h1 id="title">Fun GIPHY everyday</h1>
+        <h1 id="title">Fun GIPHY Everyday For Everyone</h1>
     </div>
 
     <div class="container">
@@ -24,12 +24,12 @@
         
         <div class="row">
         <!--storing giphy images-->
-            <div class="col-md-8">
+            <div class="col-md-9">
                 <span id="giphyImages"></span>
             </div>
         <!--add new action-->
-            <div class="col-md-4">
-                <h4>Add an action</h4>
+            <div class="col-md-3">
+                <h4>Add something fun</h4>
                 <input type="action" class="form-control" id="inputAction"><br>
                 <input class="btn btn-primary" type="submit" id="addAction">
             </div>
