HTML, CSS, JS update

--- a/index.html
+++ b/index.html
@@ -21,27 +21,32 @@
     <div class="container">
         <!--Storing all new button-->
         <div class="row">
-            <span id="actionButton"></span>
-        </div>
-        
-        <div class="row">
-        <!--storing giphy images-->
             <div class="col-md-9">
-                <span id="giphyImages"></span>
+                <span id="actionButton"></span>
             </div>
-        <!--add new action-->
+            <!--add new action-->
             <div class="col-md-3">
                 <h4>Add something fun</h4>
                 <input type="action" class="form-control" id="inputAction"><br>
                 <input class="btn btn-primary" type="submit" id="addAction">
             </div>
+
+        </div>
+        <br>
+        <div class="row">
+            <!--storing giphy images-->
+            <div class="col-md-12">
+                <span id="giphyImages"></span>
+            </div>
+            <!--add new action-->
+
         </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script rel="text/javascript" src="assets/javascripts/giphyAPI.js"></script>
-    
+
 </body>
 
 </html>
