CSS, JS, HTML update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body background="./assets/images/Background_images.png">
     <div class="jumbotron text-center">
         <h1 id="title">Fun GIPHY Everyday For Everyone</h1>
     </div>
@@ -22,7 +22,7 @@
         <!--Storing all new button-->
         <div class="row">
             <div class="col-md-9">
-                <span id="actionButton"></span>
+                <div id="actionButton"></div>
             </div>
             <!--add new action-->
             <div class="col-md-3">
