--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="shortcut icon" href="http://store-images.s-microsoft.com/image/apps.54373.13510798886612985.f025f35f-da60-4f9e-ad25-715eae369216.78618d24-3d70-4bc9-8f67-293136ad658c" />
+    <link rel="shortcut icon" href="https://media.giphy.com/media/FMnVZzDALopvG/giphy.gif" />
 
 </head>
 
